Turjimaad erajo engiriis ah

--- a/KMG_Soomaaliya.mw
+++ b/KMG_Soomaaliya.mw
@@ -1,57 +1,34 @@
-{{Infobox Country or territory
-|native_name              = {{lang|so|Jamhuuriyadda Soomaaliya}}<br/>{{rtl-lang|ar|''جمهورية الصومال''}} 
-|conventional_long_name   = ''Somali Republic''
-|common_name              = Soomaaliya
-|image_flag               = Flag of Somalia.svg
-|image_coat               = Coat of arms of Somalia.png
-|image_map                = LocationSomalia.png
-|national_motto           = Hal luugad, Hal Dad, Hal Diin ''<br/>(One Language, One people, One Religion)''
-|national_anthem          = {{lang|so|[[Astaanta Calanka Soomaaliya |Soomaaliyeey Toosoow]]}}
-|official_languages       = [[Af Soomaali|Af Soomaali]]<sup>1</sup>
-|government_type          = [[Transitional Federal Government of the Somali Republic|Transitional Federal Government]]
-|leader_title1            = [[President of Somalia|Madaxwayne]]
-|leader_title2            = [[Prime Minister of Somalia|Raysalwasaare]]
-|leader_name1             = [[Cabdullaahi Yuusuf Axmed]]
-|leader_name2             = [[Nuur Xasan Xuseen]]
-|capital                  = [[Muqdisho]]
-|latd=2 |latm=02 |latNS=N |longd=45 |longm=21 |longEW=E
-|largest_city             = Magaalo madax
-|area                     = 637,661
-|areami²                  = 246,201 <!--Do not remove per [[WP:MOSNUM]]-->
-|area_rank                = 42nd
-|area_magnitude           = 1 E11
-|percent_water            = 1.6
-|population_estimate      = 10,700,000<sup>2</sup>
-|population_estimate_year = 2003
-|population_estimate_rank = 74st
-|population_census        = 7,114,431
-|population_census_year   = 1987
-|population_density       = 13
-|population_densitymi²    = 34 <!--Do not remove per [[WP:MOSNUM]]-->
-|population_density_rank  = 198th
-|GDP_PPP_year             = 2006
-|GDP_PPP                  = $55.023 billion <!--CIA-->
-|GDP_PPP_rank             = <small>160th</small>
-|GDP_PPP_per_capita       = $600
-|GDP_PPP_cala_qof_rank  = <small>not ranked</small>
-|HDI_year                 = 2003
-|HDI                      = n/a
-|HDI_rank                 = unranked
-|HDI_category             = <font color="gray">n/a</font>
-|sovereignty_type         = [[Dowlad Xorah]]
-|sovereignty_note         = Gumeystihii [[Ingiriiska]] iyo [[Taliyaaniga]]
-|established_event1       = Tariikhdii
-|established_date1        = [[Luuliyo 1]] [[1960]]
-|cctld                    = [[.so]]
-|furaha_debeda             = 252
-|wakhti                = [[East Africa Time|EAT]]
-|utc_offset               = +3
-|time_zone_DST            = not observed
-|utc_offset_DST           = +3
-|lacagta                 = [[Shilin Soomaali]]
-|mag._lacagta            = SOS
-|footnote1                = [https://www.cia.gov/cia/publications/factbook/geos/so.html#People CIA Factbook]
-|footnote2                = [http://news.bbc.co.uk/2/hi/africa/country_profiles/1072592.stm BBC News country profile]
+{{Dalalka
+|native_name                   = Jamhuuriyadda Soomaaliya<br/>''جمهورية الصومال'' 
+|conventional_long_name        = ''Somali Republic''
+|common_name                   = Soomaaliya
+|qaarada                       = [[Afrika]]
+|sawir_calan                   = Flag of Somalia.svg
+|sawir_qaran                   = Coat of arms of Somalia.png
+|astaan_calan                  = [[Astaanta Calanka Soomaaliya |Soomaaliyeey Toosoow]]
+|image_map                     = LocationSomalia.png
+|caasimada                     = [[Muqdisho]]
+|luuqadaha                     = [[Af-Soomaali]]   
+|dowlada                       = &nbsp;
+|darajo_hogaamiye1             = [[Madaxweyneyaashii Soomaaliya| Madaxweyne]]
+|darajo_hogaamiye2             = [[Ra'iisul wasaarayaahii Soomaaliya| Ra'iisul wasaaraha]] 
+|magac_hogaamiye1              = [[Cabdullaahi Yuusuf Axmed]]
+|magac_hogaamiye2              = [[Nuur Xasan Xuseen]]
+|sovereignty_type              = '''Ka xoroobey'''
+|sovereignty_note              = Gumeystihii [[Ingiriis]]ka iyo [[Talyaani]]ga
+|established_event1            = Taariikhda
+|established_date1             = 1 [[Luuliyo]], [[1960]] 
+|area                          = 637,661
+|areami²                       = 246,201
+|biyo                          = 1.6
+|population_estimate           = 10,700,000<sup>2</sup>
+|population_estimate_year      = 2003
+|lacagta                       = [[Shilin Soomaali]] 
+|wakhti                        = [[East Africa Time|EAT]]
+|furaha_debeda		       = 252
+|footnote1                     = [https://www.cia.gov/cia/publications/factbook/geos/so.html#People CIA Factbook]
+|footnote2                     = [http://news.bbc.co.uk/2/hi/africa/country_profiles/1072592.stm BBC News country profile]
+
 }}
 
 '''Soomaaliya''' (''Luugada Carabiga'' الصومال) loona yagaano '''Jamhuuriyadda Soomaaliya''' waa dal kuyaala geeska bari ee [[Qaarad|Qaaradda]] [[Afrika]]. Waa dal ku fadhiya dhul balaaran isla markaasna raadkiisa taariikhda dunida laga heli karo, isagoo hadba magac lagu tilmaamayo, gaar ahaan xilligii [[Fraaciin|Faraaciinta]] iyo [[Rooman|Romaankuba]]. Soomaaliya waxay u qaybsantahay 18 gobol,oo kala ah:
@@ -182,12 +159,13 @@ halka liibaanta qoryooley ay tahey wax soo saarka soomaalida meesh wax soo saar 
 *16. Bishii Luulyo 1960kii waxaa dalka madaxweyne u noqday [[Aadan Cabdulle Cusmaan]]. 
 *17. Bishii Juun [[1967]]dii waxaa dalka madaxweyne u noqday [[Cabdi Rashiid Cali Sharma'arke]].
 *18. bishii Octobar [[1969]]kii waxaa dalka madaxweyne u noqday [[Maxamed Siyaad Barre]]
-*19. Warshadii kaluunka Laasqoray waxaa la aasaasay 1970kii
+*19. Warshadii kaluunka Laasqoray waxaa la aasaasay [[1970]]kii
 *20. Warshadda dharka Balcad waxaa la aasaasay sanadii [[1968]]dii
 *21. Warshadda sonkorta [[Jowhar]] waxaa la aasaasay [[1962]]dii 
 *22. Warshadda Caanaha Xanar waxaa la dhisay [[1966]]kii
 *23. Warshadda Hilibka ee [[Kismaayo]] waxaa la dhisay [[1973]]kii.
-*24. Warshadda Sonkorta ee Mareerey waxaa la aasaasay 1972 dii
+*24. Warshadda Sonkorta ee Mareerey waxaa la aasaasay [[1972]]dii</br>
+
 [[Category:Dowladaha Afrika]]
 [[Category:Wadamada Afrika]]
 
