[[Category:Siyaasada Soomaaliya]]

--- a/Cabdullaahi_Yuusuf.mw
+++ b/Cabdullaahi_Yuusuf.mw
@@ -79,6 +79,7 @@ C/laahi yuusuf waa nin jecel kursi ma ahan nin jecel maal aduunyo. naftiisa waxu
 waa yaxye axmed siciid oo ku nool [[garowe]]
 
 [[Category:Soomaaliya]]
+[[Category:Siyaasada Soomaaliya]]
 
 [[ar:عبد الله يوسف أحمد]]
 [[bg:Абдула Юсуф Ахмед]]
