:'''Ra'iisul wasaarayaahii soomaray dalka [[Soomaaliya]].'''

--- a/Ra'iisul_wasaarayaashii_Soomaaliya.mw
+++ b/Ra'iisul_wasaarayaashii_Soomaaliya.mw
@@ -1,3 +1,8 @@
+:'''Ra'iisul wasaarayaahii soomaray dalka [[Soomaaliya]].'''
+<gallery>
+Image:Cabdullaahi_Ciise.jpg‎|<center>[[Cabdullaahi Ciise]]</br> [[1949]] - [[1960]]</center>
+</gallery>
+
 [[Category:Siyaasada Soomaaliya]]
 
 [[de:Liste der Premierminister Somalias]]
