--- a/Madaxweyneyaashii_Soomaaliya.mw
+++ b/Madaxweyneyaashii_Soomaaliya.mw
@@ -1,4 +1,4 @@
-:'''Madaxweyneyaashii soo maray dalka [[Soomaaliya]].'''
+:'''Madaxweyneyaashii soomaray dalka [[Soomaaliya]].'''
 <gallery>
 Image:Aadan_Cade.jpg|<center>[[Aadan Cabdulle Cusmaan]]</br> [[1960]] - [[1967]]</center>
 Image:Sharmaarke.jpg|<center>[[Cabdirashiid Cali Sharma'arke|C/rashiid C. Sharma'arke]]</br> [[1967]] - [[1969]]</center>
