Waxa raaca [[Ra'iisul wasaarayaahii Soomaaliya]]

--- a/Madaxweyneyaashii_Soomaaliya.mw
+++ b/Madaxweyneyaashii_Soomaaliya.mw
@@ -10,7 +10,12 @@ Image:Abdiqassim_Salad_Hassan_1.jpg|<center>[[Cabdiqaasim Salaad Xassan|C/qaasim
 Image:Abdullahi_Yusuf_Ahmed.jpg|<center>[[Cabdullaahi Yuusuf Axmed|C/laahi Yuusuf Axmed]]</br> [[2004]] - '''Hada'''</center>
 </gallery>
 
+==Waxa raaca==
+
+[[Ra'iisul wasaarayaahii Soomaaliya]]
+
 [[Category:Siyaasada Soomaaliya]]
+[[Category:Soomaaliya]]
 
 [[ar:قائمة رؤساء الصومال]]
 [[cs:Seznam prezidentů Somálska]]
