--- a/Ra'iisul_wasaarayaashii_Soomaaliya.mw
+++ b/Ra'iisul_wasaarayaashii_Soomaaliya.mw
@@ -3,8 +3,11 @@
 Image:Cabdullaahi_Ciise.jpg‎|<center>[[Cabdullaahi Ciise]]</br> [[1949]] - [[1960]]</center>
 </gallery>
 
-[[Category:Siyaasada Soomaaliya]]
+==Waxa raaca===
+[[Madaxweyneyaashii Soomaaliya]]
 
+[[Category:Siyaasada Soomaaliya]]
+[[Category:Soomaaliya]]
 [[de:Liste der Premierminister Somalias]]
 [[fr:Premiers ministres de la Somalie]]
 [[id:Daftar Perdana Menteri Somalia]]
