--- a/Ra'iisul_wasaarayaashii_Soomaaliya.mw
+++ b/Ra'iisul_wasaarayaashii_Soomaaliya.mw
@@ -3,7 +3,7 @@
 Image:Cabdullaahi_Ciise.jpg‎|<center>[[Cabdullaahi Ciise]]</br> [[1949]] - [[1960]]</center>
 </gallery>
 
-==Waxa raaca===
+==Waxa raaca==
 [[Madaxweyneyaashii Soomaaliya]]
 
 [[Category:Siyaasada Soomaaliya]]
