--- a/Mahathir_Bin_Maxamed.mw
+++ b/Mahathir_Bin_Maxamed.mw
@@ -10,6 +10,34 @@ Qormada Asbuucaan waxaan  ku soo qaadanaynaa  waa kuma Tun Dr Maathir Bin Mohame
 
 '''Tun Dr Maathir Bin Maxamed''' waxaa uu dhashay 20 December [[1925]] waxaana uu ku dhashay Alor Setar oo ah magaalo madaxda gobolka Kedah oo dhacda dhinaca  waqooyiga dalka  Malaysia,waxaa uu dhameeyay waxbarashada Dugsiga sare sanadkii 1947 waxana uu sidoo kale wax ka soo bartay  machadka Edward VII College ee dhanka daawada oo ku yaala  Singapore,markii uu soo dhameeyay wax barashadiisa,ayaa waxaa uu ku soo biiray dowlada shaqaalaheeda dhanka caafimadaadka,waxaana uu shaqadaasi joojiyay sanadkii 1957.
 
+[[Category:Shaqsiyadaad]]
+
+[[ar:مهاتير محمد]]
+[[bn:মাহাথির বিন মোহাম্মদ]]
+[[da:Mahathir bin Mohamad]]
+[[de:Mahathir bin Mohamad]]
+[[eo:Mahathir bin Mohamad]]
+[[eu:Mahathir bin Mohamad]]
+[[fa:ماهاتیر محمد]]
+[[fr:Mahathir bin Mohamad]]
+[[ko:마하티르 빈 모하마드]]
+[[hi:महाथिर मोहमद]]
+[[id:Mahathir Mohamad]]
+[[is:Mahathir bin Mohamad]]
+[[ms:Mahathir bin Mohamad]]
+[[ja:マハティール・ビン・モハマド]]
+[[no:Mahathir bin Mohamad]]
+[[pl:Mahathir bin Mohamad]]
+[[sa:महाथिर मोहमद]]
+[[sh:Mahatir Mohammad]]
+[[fi:Mahathir bin Mohamad]]
+[[sv:Mahathir bin Mohamad]]
+[[th:มหาเธร์ โมฮัมหมัด]]
+[[vi:Mahathir bin Mohamad]]
+[[zh:馬哈蒂爾·本·穆罕默德]]
+
+
+
 Dr. Mahathir sanadkii 1944 ayaa waxaa uu xubin ka noqday Ururka Midowa malasiya ee wadaniga ah, (United Malays National Organisation) (UMNO) sanadkii 1964 ayaa waxaa uu ka mid noqday baarlaamka dowlada Malashiya,
 
 Markii la arkay in Dr. Mahathir uu yahay nin aad u danayo wax barashada ayaa sanadkii 1968 laga dhigay gudoomiyaha sare ee gudiga wax barashada,sanadkii 1972 ayaa waxaa uu xubin ka noqday jaamacda Maxkamada iyo waliba jaamacada Malaya,sanadkii 1974 ayaa waxaa uu noqday gudoomiyaha jaamacada gudigeeda.
