--- a/Cabdullaahi_Yuusuf.mw
+++ b/Cabdullaahi_Yuusuf.mw
@@ -80,6 +80,7 @@ waa yaxye axmed siciid oo ku nool [[garowe]]
 
 [[Category:Soomaaliya]]
 [[Category:Siyaasada Soomaaliya]]
+[[Category:Shaqsiyadaad]]
 
 [[ar:عبد الله يوسف أحمد]]
 [[bg:Абдула Юсуф Ахмед]]
