--- a/Cabdiqaasim_Salaad.mw
+++ b/Cabdiqaasim_Salaad.mw
@@ -42,6 +42,8 @@
 '''Cabdiqaasim Salaad Xassan''' wuxuu dhashay sanadku markuu ahaa [[1941]]dii. Wuxuu ahaa madaxwaynaha [[Soomaaliya]] taariikhdu markey ahayd 27dii [[Agoosto]] sanadkii [[2000]] ilaa 14kii [[Oktoobar]] sanadkii [[2004]].
 
 [[Category:Siyaasada Soomaaliya]]
+[[Category:Soomaaliya]]
+[[Category:Shaqsiyadaad]]
 
 [[ca:Abdiqassim Salad Hassan]]
 [[cs:Abdiqasim Salad Hassan]]
