--- a/Xuseen_Caydiid.mw
+++ b/Xuseen_Caydiid.mw
@@ -45,6 +45,6 @@
 
 [[Category:Siyaasada_Soomaaliya]]
 [[Category:Shaqsiyadaad]]
-
+[[Category:Soomaaliya]]
 [[de:Hussein Mohammed Farah]]
 [[en:Hussein Mohamed Farrah]]
