--- a/Maxamed_Faarax_Caydiid.mw
+++ b/Maxamed_Faarax_Caydiid.mw
@@ -45,7 +45,8 @@
 
 [[Soomaaliya]]
 
-[[Category:Soomaaliya|Caydiid, Maxamed Faarax]]
+[[Category:Soomaaliya]]
+[[Category:Shaqsiyadaad]]
 
 [[cs:Mohamed Farrah Aidid]]
 [[de:Mohammed Farah Aidid]]
