--- a/Cali_Mahdi.mw
+++ b/Cali_Mahdi.mw
@@ -57,6 +57,8 @@ Cali Mahdi sanadkii 2007 wuxuu abaabulay shir nabadeed belaha Somaaliyeed laysug
 ([[1991]]-[[1995]])
 
 [[Category:Siyaasada Soomaaliya]]
+[[Category:Soomaaliya]]
+[[Category:Shaqsiyadaad]]
 
 [[ca:Ali Mahdi Muhammad]]
 [[de:Ali Mahdi Mohammed]]
