[[Category:Siyaasada Soomaaliya]]

--- a/Maxamed_Faarax_Caydiid.mw
+++ b/Maxamed_Faarax_Caydiid.mw
@@ -47,6 +47,7 @@
 
 [[Category:Soomaaliya]]
 [[Category:Shaqsiyadaad]]
+[[Category:Siyaasada Soomaaliya]]
 
 [[cs:Mohamed Farrah Aidid]]
 [[de:Mohammed Farah Aidid]]
