--- a/Cabdirashiid_Sharmaarke.mw
+++ b/Cabdirashiid_Sharmaarke.mw
@@ -71,6 +71,7 @@ Lix maalmood ka dib markii dilku dhacay ayay ciidamadii dalka talada xoog kula w
 
 
 [[Category:Siyaasada Soomaaliya]]
+[[Category:Soomaaliya]]
 [[Category:Shaqsiyadaad]]
 
 [[de:Abdirashid Ali Shermarke]]
