--- a/Aadan_Daar.mw
+++ b/Aadan_Daar.mw
@@ -57,6 +57,7 @@ Golihii baarlamaanka ee ugu horreeyay ee ay [[Soomaaliya]] yeelato wuxuu u doort
 
 Madaxweyne [[Aadan Cabdulle Cusmaan]] '''"Aadan cadde"''' wuxuu ku hadli jirey afafka [[Talyaaniga]], [[Ingiriis]]ka iyo [[Af-Carabi|Carabiga]]. Doorashooyinkii dalka ka dhacay sanadkii [[1967]] waxaa looga adkaaday doorashooyinkaas, wuxuuna xilkii madaxweynanimo ku wareejiyay madaxweynihii la doortay Allaha u naxariistee [[Cabdirashiid Cali Sharma'arke]], bishii [[Juun]] isla sanadkaas (1967).
 
+[[Category:Soomaaliya]]
 [[Category:Siyaasada_Soomaaliya]]
 [[Category:Shaqsiyadaad]]
 
