Waxaaan saxay hingaad qaldaneed.

--- a/KMG_Soomaaliya.mw
+++ b/KMG_Soomaaliya.mw
@@ -11,7 +11,7 @@
 |luuqadaha                     = [[Af-Soomaali]]   
 |dowlada                       = &nbsp;
 |darajo_hogaamiye1             = [[Madaxweyneyaashii Soomaaliya| Madaxweyne]]
-|darajo_hogaamiye2             = [[Ra'iisul wasaarayaahii Soomaaliya| Ra'iisul wasaaraha]] 
+|darajo_hogaamiye2             = [[Ra'iisul wasaarayaahii Soomaaliya| Ra'iisul wasaare]] 
 |magac_hogaamiye1              = [[Cabdullaahi Yuusuf Axmed]]
 |magac_hogaamiye2              = [[Nuur Xasan Xuseen]]
 |sovereignty_type              = '''Ka xoroobey'''
