--- a/Jarmal.mw
+++ b/Jarmal.mw
@@ -1,6 +1,38 @@
-[[Image:Europe location GER.png|right|thumbnail|400px|Jarmal]]
+{{Dalalka
+|native_name                   = ''Bundesrepublik Deutschland''
+|conventional_long_name        = Jarmal
+|common_name                   = Jarmal
+|qaarada                       = [[Yurub]]
+|sawir_calan                   = Flag of Germany.svg
+|sawir_qaran                   = Coat of Arms of Germany.svg
+|astaan_calan                  = 
+|image_map                     = EUR location GER.PNG|300px
+|caasimada                     = [[Berlin]]
+|luuqadaha                     = [[Luuqada Jamel|Jarmal]]
+|dowlada                       = &nbsp;
+|darajo_hogaamiye1             = [[Madaxweyneyaashii Jarmalka| Madaxwayne]]
+|darajo_hogaamiye2             = 
+|magac_hogaamiye1              = [[Horst Köhler]]
+|magac_hogaamiye2              = 
+|sovereignty_type              =
+|sovereignty_note              = 
+|established_event1            =
+|established_date1             =
+|area                          = 357,021
+|areami²                       = 137,847
+|biyo                          = 2.416
+|population_estimate           = 82,210,000
+|population_estimate_year      = 31 Dis, 2007
+|lacagta                       = Euro
+|wakhti                        = 
+|furaha_debeda		       = 49
+|footnote1                     =
+|footnote2                     =
 
-Wadan [[Yurub]] ku yaala oo [[faransis]]ka iyo [[denmark]]i xad la wadaaga. Waana wadama aduunka ugu hormarsan marka laga reebo [[jabaan]] iyo [[Mareykan]].
+}}
+
+
+'''Jarmal''' waa wadan [[Yurub]] ku yaala oo [[Faransis]]ka iyo [[Denmark]] xad la wadaaga. Waana wadama aduunka ugu hormarsan marka laga reebo [[jabaan]] iyo [[Mareykan]].
 
 [[Berlin]]
 
