--- a/Mahathir_Bin_Maxamed.mw
+++ b/Mahathir_Bin_Maxamed.mw
@@ -8,7 +8,7 @@ Wax uu aamin san yahay in dhibka dunida Islaamka iminka ka taagan ay masuul ka y
 
 Qormada Asbuucaan waxaan  ku soo qaadanaynaa  waa kuma Tun Dr Maathir Bin Mohamed Raiisul wasaarihii hore e dalka Malaysia. 
 
-'''Tun Dr Maathir Bin Maxamed''' waxaa uu dhashay 20 December [[1925]] waxaana uu ku dhashay Alor Setar oo ah magaalo madaxda gobolka Kedah oo dhacda dhinaca  waqooyiga dalka  Malaysia,waxaa uu dhameeyay waxbarashada Dugsiga sare sanadkii 1947 waxana uu sidoo kale wax ka soo bartay  machadka Edward VII College ee dhanka daawada oo ku yaala  Singapore,markii uu soo dhameeyay wax barashadiisa,ayaa waxaa uu ku soo biiray dowlada shaqaalaheeda dhanka caafimadaadka,waxaana uu shaqadaasi joojiyay sanadkii 1957.
+'''Tun Dr Mahathir Bin Maxamed''' waxaa uu dhashay 20 December [[1925]] waxaana uu ku dhashay Alor Setar oo ah magaalo madaxda gobolka Kedah oo dhacda dhinaca  waqooyiga dalka  Malaysia,waxaa uu dhameeyay waxbarashada Dugsiga sare sanadkii 1947 waxana uu sidoo kale wax ka soo bartay  machadka Edward VII College ee dhanka daawada oo ku yaala  Singapore,markii uu soo dhameeyay wax barashadiisa,ayaa waxaa uu ku soo biiray dowlada shaqaalaheeda dhanka caafimadaadka,waxaana uu shaqadaasi joojiyay sanadkii 1957.
 
 [[Category:Shaqsiyadaad]]
 
