[[en:Mahathir bin Mohamad]]

--- a/Mahathir_Bin_Maxamed.mw
+++ b/Mahathir_Bin_Maxamed.mw
@@ -72,7 +72,7 @@ Hormarku maahan mid si sahlan lagu gaari karo,tusaale ahaan dalkeena [[Soomaaliy
 Maxamed Cabdi Maxamed Bootaan
 Botaan1@hotmail.com
 [[ar:مهاتير محمد]]
-[[en:Mahathir bin Moxamad]]
+[[en:Mahathir bin Mohamad]]
 [[bn:মাহাথির বিন মোহাম্মদ]]
 [[da:Mahathir bin Mohamad]]
 [[de:Mahathir bin Mohamad]]
