*Empty MediaWiki Message*

--- a/Mahathir_Bin_Maxamed.mw
+++ b/Mahathir_Bin_Maxamed.mw
@@ -12,8 +12,6 @@ Qormada Asbuucaan waxaan  ku soo qaadanaynaa  waa kuma Tun Dr Maathir Bin Mohame
 
 '''Tun Dr Mahathir Bin Maxamed''' waxaa uu dhashay 20 December [[1925]] waxaana uu ku dhashay Alor Setar oo ah magaalo madaxda gobolka Kedah oo dhacda dhinaca  waqooyiga dalka  Malaysia,waxaa uu dhameeyay waxbarashada Dugsiga sare sanadkii 1947 waxana uu sidoo kale wax ka soo bartay  machadka Edward VII College ee dhanka daawada oo ku yaala  Singapore,markii uu soo dhameeyay wax barashadiisa,ayaa waxaa uu ku soo biiray dowlada shaqaalaheeda dhanka caafimadaadka,waxaana uu shaqadaasi joojiyay sanadkii 1957.
 
-[[Category:Shaqsiyadaad]]
-
 Dr. Mahathir sanadkii 1944 ayaa waxaa uu xubin ka noqday Ururka Midowa malasiya ee wadaniga ah, (United Malays National Organisation) (UMNO) sanadkii 1964 ayaa waxaa uu ka mid noqday baarlaamka dowlada Malashiya,
 
 Markii la arkay in Dr. Mahathir uu yahay nin aad u danayo wax barashada ayaa sanadkii 1968 laga dhigay gudoomiyaha sare ee gudiga wax barashada,sanadkii 1972 ayaa waxaa uu xubin ka noqday jaamacda Maxkamada iyo waliba jaamacada Malaya,sanadkii 1974 ayaa waxaa uu noqday gudoomiyaha jaamacada gudigeeda.
@@ -73,6 +71,10 @@ Hormarku maahan mid si sahlan lagu gaari karo,tusaale ahaan dalkeena [[Soomaaliy
                 
 Maxamed Cabdi Maxamed Bootaan
 Botaan1@hotmail.com
+
+[[Category:Shaqsiyadaad]]
+[[Category:Aasiya]]
+
 [[ar:مهاتير محمد]]
 [[en:Mahathir bin Mohamad]]
 [[bn:মাহাথির বিন মোহাম্মদ]]
