--- a/Category:Afrika.mw
+++ b/Category:Afrika.mw
@@ -56,6 +56,7 @@
 [[ki:Category:Africa]]
 [[ko:분류:아프리카]]
 [[kw:Category:Afrika]]
+[[ky:Category:Африка]]
 [[la:Categoria:Africa]]
 [[lb:Kategorie:Afrika]]
 [[li:Categorie:Afrika]]
