Jamhuuriyadda Jabuuti</br> جمهورية جيبوتي

--- a/Jabuuti.mw
+++ b/Jabuuti.mw
@@ -1,4 +1,35 @@
-[[image:dj-map.png|thumb|290px|Djibouti]]
+{{Dalalka
+|native_name                   = Jamhuuriyadda Jabuuti</br> جمهورية جيبوتي
+|conventional_long_name        = ''Republic of Djibouti''
+|common_name                   = Jabuuti
+|qaarada                       = [[Afrika]]
+|sawir_calan                   = Flag of Djibouti.svg
+|sawir_qaran                   = Coat of arms of Djibouti.svg
+|astaan_calan                  = [[Astaanta Calanka Jabuuti|Jabuuti]]
+|image_map                     = LocationDjibouti.svg
+|caasimada                     = [[Caasimada Jabuuti|Jabuuti]]
+|luuqadaha                     = [[Af-Soomaali]], [[Af-Carabi]], [[Af-Faransiis]]
+|dowlada                       = &nbsp;
+|darajo_hogaamiye1             = [[Madaxweyneyaashii Jabuuti|Madaxwayne]]
+|darajo_hogaamiye2             = [[Ra'iisul wasaarayaashii Jabuuti|Ra'iisul wasaare]]
+|magac_hogaamiye1              = [[Ismaaciil Cumar Geelle]]
+|magac_hogaamiye2              = [[Dileita Mohamed Dileita]]
+|sovereignty_type              = Ka xoroobey
+|sovereignty_note              = Gumeystihii [[Faransiis]]ka
+|established_event1            = Taariikhda
+|established_date1             = 22 [[Juun]], [[1977]]
+|area                          = 23,200
+|areami²                       = 8,958 
+|biyo                          = 0.09
+|population_estimate           = 496,374
+|population_estimate_year      = 2007
+|lacagta                       = [[Faranka Jabuuti|Farank]]
+|wakhti                        = [[EST]]
+|furaha_debeda		       = 253
+|footnote1                     = 
+|footnote2                     = 
+
+}}
 
 '''Jabuuti''' ama Djibouti, loona yaqaan Jamhuuriyada Jabuuti waa dal yar ee ku taala [[bariga]] [[Geeska Afrika]]. Jabuuti waxaay xad la leedahay [[Ilitareeya|Iritareeya]] xaga waqooyi, [[Itoobiya]] xaga galbeed iyo koonfurba iyo [[Soomaaliya]] oo ka xigta koonfurbari. Dhinaca kale Jabuuti waxaa ka xiga [[Baddacas]] iyo [[Gacanka Cadmeed]].
 
