روبوت  إضافة: [[ky:Category:Азия]]

--- a/Category:Aasiya.mw
+++ b/Category:Aasiya.mw
@@ -59,6 +59,7 @@ Qaarada aasiya waa qaarada ugu dadka badan uguna baaxada weyn qaaradaha aduunka.
 [[kg:Category:Azia]]
 [[ko:분류:아시아]]
 [[kw:Category:Asi]]
+[[ky:Category:Азия]]
 [[la:Categoria:Asia]]
 [[lb:Kategorie:Asien]]
 [[li:Categorie:Azië]]
