--- a/Category:Gabayada.mw
+++ b/Category:Gabayada.mw
@@ -2,6 +2,242 @@ gabaygu waa maanso ama qayb ka mid ah suugaanta af soomaliga. umada soomalidu wa
 
 == noocyada gabayga ==
 noocyada gabayadu afsoomaligu waa uu farabadanyahay waxana ka mid ah geeraarka, guurawga, maansada, saarka, shiribka, buraanburka iyo [[gabayga caadiga]] kuwaas dhaamaantoodna waxa ay ku kala duwanyihiin noocyada qaafiyada iyo tirada shaqalada ku jira tuduca.
+    *
+      Xuseenow cadaabkii ma tage, caaqil baad tahaye
+    *
+      Cindigaad u roon tahay sidii, caano saafi ahe
+    *
+      Codka iyo afkaartaada waan, ka cokanaadaaye
+    *
+       
+    *
+      Cimrigiisu raagyow libaax, coof leh baad tahaye
+    *
+      Cunto iyo waxsiin kuguma rabo, caaddilkay qaba’e
+    *
+      Sidaad cadowga uga aarsataan, kugu ciseeyaaye
+    *
+       
+    *
+      Dumar ubadka caascaasa oo, ceebalaa jira’e
+    *
+      Cubtan hooyadaa baa ahayd, aan cayaar barane
+    *
+      Canbarkii adeerkay dhaloo, caan ah baa tahaye
+    *
+       
+    *
+      Cabbanaanta kaa muuqatiyo, caajis la’idaada
+    *
+      Casar iyo dharaar dhiilladaad, la cartanlanaysid
+    *
+      Caaqibo ninkii lihiba wuu, ku cibro qaataaye
+    *
+       
+    *
+      Waxay kugu canbaaraynayaan, waa ca’ aan jirine
+    *
+      Adigoo custiin iyo gargaar, ugu ciraabaaya
+    *
+      Citiqaadka xumi waa waxay, kugu colaadsheene
+    *
+       
+    *
+      Hayeeshee cibaarada adduun, haw ciyoon dudine
+    *
+      Rasuulkiiba qaar caasiyoo, caaradaa jiraye
+    *
+      Walaalow kelyaha ciirso waa, caynkii oo kale’e
+    *
+       
+    *
+      Cudud kula dhaqaaqdiyo Allaa, ciidan kuu fidinine
+    *
+      Anna caafimaad talo qabtaan, ku callimayaaye
+    *
+      Culuumtayda maqal waa mid aad, ka cabbi doontaaye
+    *
+       
+    *
+      Walaalow carriga baaba’iyo, cawska gubanaaya
+    *
+      Carruuraha barooranahayoo, adiga kuu ciiqle
+    *
+      Jeer cirirku naafaha beddelo, caato haw noqone
+    *
+       
+    *
+      Ragga lagu camiiqtoobey baa, kuu cashiira ahe
+    *
+      Qabuuraha cusayb ahi waa, curaddadeenniiye
+    *
+      Waalaalow waxay ciirsadaan, cuurka aan nahaye
+    *
+       
+    *
+      Walaalow inaan caawinnaan, kaa codsanayaaye
+    *
+      Waalaalow sabcaallo cusub baan, ku cirfin doonnaaye
+    *
+      Walaalow tub ciirsila’ ah oo, caaddan baad mariye
+    *
+       
+    *
+      Walaalow cirbaha kabaha karo, calafi waa liide
+    *
+      Walaalow cagaag baa jiree, suumanka u ceeji
+    *
+      Walaalow curuuqdiyo lafaha, caabbi waa socode
+    *
+       
+    *
+      Walaalow ciddii aakhiraa, kuu calaacaline
+    *
+      Cukur qayladiisaa dhegaha, laga cufaystaaye
+    *
+      Cali Shira-Farey baa godkii, ciidamow ka lehe
+    *
+       
+    *
+      Cabdullaahi Shiikh baa qabriga, nooga soo cabane
+    *
+      Elji ciririqdiisaan nafluhu, ka carwasaadayne
+    *
+      Cabdulqaaddir cirid meel ah bay, cagaf ku aaseene
+    *
+       
+    *
+      Walaalow cirradii Baajacoor, ceeskii laga qaadye
+    *
+      Hadday jeer cimaamad u lahayd, Celi ka tuuryeeye
+    *
+      Gablan buu wuxuu la cuskugaa, cimilkii Gaafow’e
+    *
+       
+    *
+      Afartii timaha cawlanayd, caawa waa labo’e
+    *
+      Caalwaaga haystuu faraha, ku ciddijiidaaye
+    *
+      Walaalow cidluu yuururaa, camal daraaddiise
+    *
+       
+    *
+      Curdankii Surweelle u kacay, kala ciniineene
+    *
+      Nimankuu rag kaga caalladnaa, way carbariyeene
+    *
+      Walaalow caq baa laysay iyo, caaraddhuub Seda’e
+    *
+       
+    *
+      Abbow Cali-Qod bay ku caddileen, caraqii Doolloode
+    *
+      Cirifyada Wardheer bay ilmadu, camanka qoysaaye
+    *
+      Waakaa sidii cawl la ganay, caalyo geyla lehe
+    *
+       
+    *
+      Asagoo cimri ah buu baroor, la cifanayaaye
+    *
+      Cusri bayna haystee sidaas, kuma canaadneene
+    *
+      Innagaa cawaan ahe hohey! codasho noo keenye
+    *
+       
+    *
+      Camalkulule wiilkii caddaa, Caanonuug dhimaye
+    *
+      Cabdi Jaamac bay kula hareen, ceeri bana weyne
+    *
+      Carowgii la dhigay Jaamac-Nayl, carunkii baa yaale
+    *
+       
+    *
+      Cawil jeenyihiisii ninkii, caarifaa garanane
+    *
+      Cooddida jirkiisii lahaa, caalle loo legedye
+    *
+      Kubab ceenadlow iilkii buu, ikana caayaaye
+    *
+       
+    *
+      Hurrow ina Cabbaas bay wadnaha, kaga cidaadeene
+    *
+      Carriskuu ku go’ay buu tukuhu, weli ka cayshaaye
+    *
+      Geesigii caadaawuhu necbaa, Daahir-Low cuna’e
+    *
+       
+    *
+      Cismaan Cabdi Cismaan iyo walaal, Caabbi baan tebaye
+    *
+      Canbaluug la moodyow Sujuu, waa cadkay maqane
+    *
+      Walaalow Curtii Cali-Yarey, kaga cuq siiyeen
+    *
+       
+    *
+      Cali Baaryareen jiifiyeen, Cagi raqdiisiiye
+    *
+      Xassankii cabbaaryaha lahaa, cidi ma raacdayne
+    *
+      Dhamuukey ku ciirsheen rasaas, dheeh casuura lehe
+    *
+      Casow Maxamedow ina Saciid, mililki ceegaagye
+    *
+      Caqli suubbanow Muuse wow, camal guhaadoone
+    *
+      Cimil Cali siday ula hareen, ciide reer Dalale
+    *
+       
+    *
+      Curguggii Goldogob baa’ba’aan, kuu caddadayee
+    *
+      Cosob bay ahaayeen dhammaan, keenay caarado’e
+    *
+      Cishiriin jir buu wada ahaa, ciidankii go’aye
+    *
+       
+    *
+      Cardintii horeetey iskuul, ku cilmi qaateene
+    *
+      Casharkay bareen waalidkood, ma calfan qoonkaase
+    *
+      Sidii caw la jaray oo kalaa, loo callaal waraye
+    *
+       
+    *
+      Saddexda iyo tobankii cirjiir, lagu cardaaduuqye
+    *
+      Dawacooyin cuucliyo dugaag, lagu cashaysiiye
+    *
+      Car yaw dhiidhiyaa laga lahaa, ciribtirkoodiiye
+    *
+       
+    *
+      Magac kuma caddayn karo raggii, ciidda hoosgalaye
+    *
+      Cuntubyaa ku lumay goobihii, Yeed ku caanbaxaye
+    *
+      Galowguba cabaad geeridii, Goroyo-Cawleede
+    *
+       
+    *
+      Walaalow cibaarada dhacdoo, layna ku cadaadshey
+    *
+      Calaan iyo nin liitey la tahay, inaan la coodayne
+    *
+      Mar uun buu ilaah noo cawilin, culuq ka doorreene
+    *
+       
+    *
+      Inkastoon ciriir weyn qabnoo, layna ku caweertay
+    *
+      Cirshigaa waxaynoogu qoran, guul calaamadane
+    *
+      Casiis bayna kaalmaynayee, haw cabiidsamine
 
 == taariikhda gabayga ==
 Gabayada afsoomaliga lama yaqaan sida uu u bilawday sida afka soomaliga oo kale laakiin waxa macruuf ah in gabayga soomaliga ahi soo maray marxalado fara oo loo aanayan karo abwaanadii hore. tusaale ahaan raage ugaas oo ku soo kordhiyay habka laba dhaca qaafiyada, ugaas nuur oo soo kordhiyay habka maansada iyo gabayada gaagaabn iyo sdioo kale isticmaalaka ereyo badan oo soomali ah.
