--- a/Category:Gabayada.mw
+++ b/Category:Gabayada.mw
@@ -712,6 +712,57 @@ ERAY BIXINTA
 Ereyfuryada iyo hordhacyada waxaa habeeyey Shaafici Xasan oo isla markaasna qoray labada gabay.
 
 == gabayayaal ==
+    *  Kulligood adoomaha rabboow qaybsha kibistiiye
+    * Qof kastoo kabtiya ama kalaha ama kur dheer fuula
+    * Bad kalluun ku jirra kollay ku tahay amase ama koob shaah ah
+    * Ninba kadabkii loo qoray Ilaah wuu la kulansiine
+    * Inaan ruuxna soo korodhsanayn kaa ha la ogaado
+    *  
+    * Ninkase koob nimca ah fuuqsadee kadin irmaan maala
+    * In karuurka uu qubo horay kaafka ugu tiille
+    * Killigiiba Reer-Hagar anaa kiin ah baa rogaye
+    * Kamma Sugulle maankii sidii kuray carruureede
+    * Kas xumaa hoddaye naagta way kala fogaayeene
+    * Ragow kibirka waa lagu kufaa kaa ha la ogaado
+    *  
+    * Lixda koos ee Reer Cali-gariye kaw iskaga siiyey
+    * Kasi waaye wuxu waa qabaal waadna kabataane
+    * Ragow kibirka waa lagu kufaa kaa ha la ogaado
+    *  
+    * Kaysaha adduun Ina Amaan kuma qarraacnayne
+    * Ragbaa keeno gali buu is yidhi waad u koraysaaye
+    * Misna kama fileyn mana hadayn kii Israa'ilaye
+    * Ragow kibirka waa lagu kufaa kaa ha la ogaado
+    *  
+    * Af xakame karkabadii u ay iyo kulaylkiiye
+    * Ka dambee Calluu yidhi intuu Kaaha guursadaye
+    * Isna kaal u tumay weyn intuu kariyey waabeeye
+    * Ragow kibirka waa lagu kufaa kaa ha la ogaado
+    *  
+    * Kalmadduu lahaa Ina Galaydh kohay gadaashiiye
+    * Kaarkuba ma joogeen hadduu keeno tuluddiiye
+    * Baallacad kalyaha kuma jareen kii uu quudhsadaye
+    * Ragow kibirka waa lagu kufaa kaa ha la ogaado
+    *  
+    * Cartan dhuurta kooraha markuu kor ugu laalaayey
+    * Garaad Faarax dhay iyo karuur kala macaanaaye
+    * Misna kala khadhaadhaa dhunkaal kulankii goobeede
+    * Ragow kibirka waa lagu kufaa kaa ha la ogaado
+    *  
+    * Adaa dunida kaligaa leh buu Koofil eersadaye
+    * Kashiisaba ma galin wiilalbaa keebka kuu qabane
+    * Ragow kibirka waa lagu kufaa kaa ha la ogaado
+    *  
+    * Kaakici wadaadkii dagaal laguna kaalmeeye
+    * Kumanyaal laguug duub cad buu keenay Beerdhiga e
+    * Waxse kadabkii go'ay maalintuu kaday raggiisiiye
+    * Kabaalkiisii baa jabay markuu kariyey Reer Kheyre
+    * Ragow kibirka waa lagu kufaa kaa ha la ogaado
+    *  
+    * Mid kuwaa ka dhigan baan arkoon kibis u laabneyne
+    * Inta uu kashbacay oo kibroo kamman wan weyn yeeshay
+    * Yuu niman karaamiyo colba leh kiish ka buuxsadaye
+    * Kashib dhaha Islaamoow naftii kii ladnaa gadaye
 
 =='''Salaan carrabey'''==
 
